# rit-food-review

./: .gitignore  LICENSE  README.md  _config.yml  index.html  pyproject.toml  requirements.txt
compilation/: compile_pages.py  test_restaurants.py
compilation/archive/mapstuff/: readme.md  ritmaps_resturaunt.jsonc
compilation/static/: README.md  homepage.jsonc  restaurants.jsonc  reviews.jsonc
docs/: index.html
docs/media/images/reviews/author/: readme.md
docs/media/styles/: index.css
docs/restaurants/: artesanos.html  beanz.html  ben-and-jerrys.html  brick_city.html  bytes.html  cantina.html  charades.html  college-grind.html  commons.html  corner-store.html  crossroads.html  ctrl-alt-deli.html  global-market.html  gracies.html  index.html  javas.html  loaded-latke.html  midnight-oil.html  nathans.html  petals.html  ritz.html
templates/: skeleton-restauraunts.html  skeleton-resturaunts.html  skeleton.html
